<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Drive_Parameter_typ" Id="{886d4aeb-4795-014c-313d-849a1ca3bf1c}">
    <Declaration><![CDATA[TYPE Drive_Parameter_typ :
STRUCT
	eDriveType: 			enumDriveType;
	VendorNameID: 			eVendorNameID;
	EtherCatAddr: 			UINT ;
	sFoeParams_Path:		T_MaxString;
	sFoeFWFile_Path:		T_MaxString;	
	LatestParamVer:			UDINT;
	bDisableFoE_Transfer:	BOOL := TRUE;
	Kt:						LREAL	:= 1.0;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>